Fixed Alerts page: added null checks and updated Thymeleaf template